# datastructc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: linear_list.h  stack.h
src/: linear_list.c  main.c  sum.c
tests/: linear_list._test.c
